--- a/src/output.css
+++ b/src/output.css
@@ -616,6 +616,10 @@ video {
   left: 12px;
 }
 
+.left-\[15px\] {
+  left: 15px;
+}
+
 .left-\[50\%\] {
   left: 50%;
 }
@@ -626,6 +630,10 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[-10px\] {
+  top: -10px;
 }
 
 .top-\[16px\] {
@@ -1176,6 +1184,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.resize-none {
+  resize: none;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1326,6 +1338,10 @@ video {
   overflow-x: auto;
 }
 
+.rounded-\[2px\] {
+  border-radius: 2px;
+}
+
 .rounded-\[3px\] {
   border-radius: 3px;
 }
@@ -1420,6 +1436,10 @@ video {
   border-color: rgb(204 204 204 / var(--tw-border-opacity));
 }
 
+.border-black\/30 {
+  border-color: rgb(0 0 0 / 0.3);
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1467,11 +1487,6 @@ video {
 .bg-\[\#ffffff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-footer {
-  --tw-bg-opacity: 1;
-  background-color: rgb(53 108 8 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -1581,6 +1596,11 @@ video {
   padding-right: 19px;
 }
 
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .px-\[22px\] {
   padding-left: 22px;
   padding-right: 22px;
@@ -1601,6 +1621,11 @@ video {
   padding-right: 37px;
 }
 
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1619,6 +1644,11 @@ video {
 .py-\[13px\] {
   padding-top: 13px;
   padding-bottom: 13px;
+}
+
+.py-\[17\.35px\] {
+  padding-top: 17.35px;
+  padding-bottom: 17.35px;
 }
 
 .py-\[20px\] {
@@ -1691,8 +1721,16 @@ video {
   padding-left: 18px;
 }
 
+.pl-\[20px\] {
+  padding-left: 20px;
+}
+
 .pr-\[18px\] {
   padding-right: 18px;
+}
+
+.pr-\[20px\] {
+  padding-right: 20px;
 }
 
 .pr-\[30px\] {
@@ -1729,6 +1767,10 @@ video {
 
 .pt-\[20px\] {
   padding-top: 20px;
+}
+
+.pt-\[22px\] {
+  padding-top: 22px;
 }
 
 .pt-\[30px\] {
@@ -1796,6 +1838,10 @@ video {
 
 .text-\[18px\] {
   font-size: 18px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[21px\] {
@@ -2013,9 +2059,8 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-custom-text {
-  --tw-text-opacity: 1;
-  color: rgb(53 108 7 / var(--tw-text-opacity));
+.text-black\/50 {
+  color: rgb(0 0 0 / 0.5);
 }
 
 .text-gray-400 {
@@ -2110,6 +2155,14 @@ video {
   transition-duration: 300ms;
 }
 
+.placeholder\:text-\[16px\]::-moz-placeholder {
+  font-size: 16px;
+}
+
+.placeholder\:text-\[16px\]::placeholder {
+  font-size: 16px;
+}
+
 .hover\:bg-green-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
@@ -2171,6 +2224,10 @@ video {
     margin-bottom: 60px;
   }
 
+  .md\:mr-\[71px\] {
+    margin-right: 71px;
+  }
+
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -2189,6 +2246,10 @@ video {
 
   .md\:mt-\[30\.6px\] {
     margin-top: 30.6px;
+  }
+
+  .md\:mt-\[39px\] {
+    margin-top: 39px;
   }
 
   .md\:mt-\[60px\] {
@@ -2229,6 +2290,14 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:max-w-\[670px\] {
+    max-width: 670px;
+  }
+
+  .md\:flex-1 {
+    flex: 1 1 0%;
   }
 
   .md\:grid-cols-2 {
@@ -2273,6 +2342,11 @@ video {
   .md\:px-\[0\] {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .md\:py-\[22px\] {
+    padding-top: 22px;
+    padding-bottom: 22px;
   }
 
   .md\:pb-0 {
