--- a/src/output.css
+++ b/src/output.css
@@ -672,10 +672,6 @@ video {
   grid-column: span 1 / span 1;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .m-3 {
   margin: 0.75rem;
 }
@@ -703,6 +699,11 @@ video {
 .my-\[13px\] {
   margin-top: 13px;
   margin-bottom: 13px;
+}
+
+.my-\[15px\] {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .my-\[30px\] {
@@ -770,6 +771,10 @@ video {
   margin-left: 1.25rem;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+
 .mr-12 {
   margin-right: 3rem;
 }
@@ -780,6 +785,10 @@ video {
 
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.mr-\[12px\] {
+  margin-right: 12px;
 }
 
 .mr-\[24px\] {
@@ -846,6 +855,10 @@ video {
   margin-top: 22px;
 }
 
+.mt-\[23px\] {
+  margin-top: 23px;
+}
+
 .mt-\[24px\] {
   margin-top: 24px;
 }
@@ -864,6 +877,10 @@ video {
 
 .mt-\[30px\] {
   margin-top: 30px;
+}
+
+.mt-\[33px\] {
+  margin-top: 33px;
 }
 
 .mt-\[40px\] {
@@ -892,6 +909,10 @@ video {
 
 .mt-\[8px\] {
   margin-top: 8px;
+}
+
+.mt-\[9px\] {
+  margin-top: 9px;
 }
 
 .line-clamp-2 {
@@ -1065,6 +1086,10 @@ video {
   width: 1170px;
 }
 
+.w-\[130px\] {
+  width: 130px;
+}
+
 .w-\[138px\] {
   width: 138px;
 }
@@ -1093,8 +1118,16 @@ video {
   width: 204px;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .w-\[24px\] {
   width: 24px;
+}
+
+.w-\[26px\] {
+  width: 26px;
 }
 
 .w-\[300px\] {
@@ -1135,6 +1168,10 @@ video {
 
 .w-\[45px\] {
   width: 45px;
+}
+
+.w-\[47px\] {
+  width: 47px;
 }
 
 .w-\[50\%\] {
@@ -1181,6 +1218,10 @@ video {
   width: 72px;
 }
 
+.w-\[83px\] {
+  width: 83px;
+}
+
 .w-\[84px\] {
   width: 84px;
 }
@@ -1191,18 +1232,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[262px\] {
-  width: 262px;
-}
-
-.w-\[26px\] {
-  width: 26px;
 }
 
 .min-w-\[270px\] {
@@ -1241,6 +1270,10 @@ video {
   max-width: 1920px;
 }
 
+.max-w-\[262px\] {
+  max-width: 262px;
+}
+
 .max-w-\[369px\] {
   max-width: 369px;
 }
@@ -1267,10 +1300,6 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-\[262px\] {
-  max-width: 262px;
 }
 
 .flex-1 {
@@ -1334,10 +1363,6 @@ video {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1420,6 +1445,10 @@ video {
   gap: 2rem;
 }
 
+.gap-\[10px\] {
+  gap: 10px;
+}
+
 .gap-\[12px\] {
   gap: 12px;
 }
@@ -1448,16 +1477,8 @@ video {
   gap: 5px;
 }
 
-.gap-\[74px\] {
-  gap: 74px;
-}
-
 .gap-\[8px\] {
   gap: 8px;
-}
-
-.gap-\[10px\] {
-  gap: 10px;
 }
 
 .gap-y-\[30px\] {
@@ -1611,6 +1632,10 @@ video {
   border-color: rgb(234 234 234 / var(--tw-border-opacity));
 }
 
+.border-\[\#EBF0FFB2\] {
+  border-color: #EBF0FFB2;
+}
+
 .border-\[\#cccccc\] {
   --tw-border-opacity: 1;
   border-color: rgb(204 204 204 / var(--tw-border-opacity));
@@ -1666,6 +1691,16 @@ video {
 .bg-\[\#68C114\] {
   --tw-bg-opacity: 1;
   background-color: rgb(104 193 20 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#68c114\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(104 193 20 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#85a76a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(133 167 106 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F0F0EF\] {
@@ -1932,6 +1967,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-\[11px\] {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
 .py-\[13px\] {
   padding-top: 13px;
   padding-bottom: 13px;
@@ -1950,6 +1990,11 @@ video {
 .py-\[4px\] {
   padding-top: 4px;
   padding-bottom: 4px;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .pb-10 {
@@ -2010,6 +2055,10 @@ video {
 
 .pl-1 {
   padding-left: 0.25rem;
+}
+
+.pl-\[14px\] {
+  padding-left: 14px;
 }
 
 .pl-\[18px\] {
@@ -2216,6 +2265,10 @@ video {
   font-weight: 800;
 }
 
+.font-\[900\] {
+  font-weight: 900;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2361,9 +2414,22 @@ video {
   color: rgb(225 0 0 / var(--tw-text-opacity));
 }
 
+.text-\[\#FFFFFFCC\] {
+  color: #FFFFFFCC;
+}
+
+.text-\[\#FFFFFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-\[\#c4c4c4\] {
   --tw-text-opacity: 1;
   color: rgb(196 196 196 / var(--tw-text-opacity));
+}
+
+.text-\[\#ffffffcc\] {
+  color: #ffffffcc;
 }
 
 .text-\[16\] {
@@ -2433,15 +2499,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#FFFFFFCC\] {
-  color: #FFFFFFCC;
-}
-
-.text-\[\#FFFFFF\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .line-through {
   text-decoration-line: line-through;
 }
@@ -2502,6 +2559,14 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.placeholder\:text-\[14px\]::-moz-placeholder {
+  font-size: 14px;
+}
+
+.placeholder\:text-\[14px\]::placeholder {
+  font-size: 14px;
 }
 
 .placeholder\:text-\[16px\]::-moz-placeholder {
@@ -2634,12 +2699,21 @@ video {
     grid-column: span 2 / span 2;
   }
 
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .md\:mb-\[60px\] {
     margin-bottom: 60px;
   }
 
   .md\:mr-\[71px\] {
     margin-right: 71px;
+  }
+
+  .md\:mr-\[74px\] {
+    margin-right: 74px;
   }
 
   .md\:mt-0 {
@@ -2714,6 +2788,10 @@ video {
     width: 100%;
   }
 
+  .md\:max-w-\[152px\] {
+    max-width: 152px;
+  }
+
   .md\:max-w-\[670px\] {
     max-width: 670px;
   }
@@ -2728,6 +2806,10 @@ video {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2771,6 +2853,11 @@ video {
     padding-bottom: 22px;
   }
 
+  .md\:py-\[13px\] {
+    padding-top: 13px;
+    padding-bottom: 13px;
+  }
+
   .md\:pb-0 {
     padding-bottom: 0px;
   }
@@ -2805,6 +2892,10 @@ video {
 
   .md\:pt-\[18px\] {
     padding-top: 18px;
+  }
+
+  .md\:pl-\[14px\] {
+    padding-left: 14px;
   }
 
   .md\:text-start {
@@ -2842,6 +2933,10 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:font-bold {
+    font-weight: 700;
   }
 
   .md\:leading-\[21\.82px\] {
