--- a/src/output.css
+++ b/src/output.css
@@ -715,11 +715,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.my-9 {
-  margin-top: 2.25rem;
-  margin-bottom: 2.25rem;
-}
-
 .my-\[10px\] {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -935,6 +930,10 @@ video {
   margin-top: 8px;
 }
 
+.mb-0 {
+  margin-bottom: 0px;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -1072,6 +1071,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-0 {
+  height: 0px;
 }
 
 .max-h-60 {
@@ -1242,6 +1245,10 @@ video {
   width: 100%;
 }
 
+.w-\[370px\] {
+  width: 370px;
+}
+
 .min-w-\[120px\] {
   min-width: 120px;
 }
@@ -1260,6 +1267,10 @@ video {
 
 .max-w-7xl {
   max-width: 80rem;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
 }
 
 .max-w-\[1040px\] {
@@ -1356,6 +1367,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[146px\] {
+  max-width: 146px;
 }
 
 .flex-1 {
@@ -1542,6 +1557,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -1590,10 +1609,6 @@ video {
   gap: 8px;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-y-\[30px\] {
   row-gap: 30px;
 }
@@ -1640,8 +1655,20 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .text-wrap {
@@ -1743,10 +1770,6 @@ video {
   border-top-width: 1px;
 }
 
-.border-l-4 {
-  border-left-width: 4px;
-}
-
 .border-solid {
   border-style: solid;
 }
@@ -1825,11 +1848,6 @@ video {
 .border-green-700 {
   --tw-border-opacity: 1;
   border-color: rgb(21 128 61 / var(--tw-border-opacity));
-}
-
-.border-l-amber-950 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(69 26 3 / var(--tw-border-opacity));
 }
 
 .border-opacity-0 {
@@ -2244,6 +2262,14 @@ video {
   padding-left: 0.25rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -2286,10 +2312,6 @@ video {
 
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
 }
 
 .pt-16 {
@@ -2356,8 +2378,12 @@ video {
   padding-top: 8px;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pt-0 {
+  padding-top: 0px;
 }
 
 .text-center {
@@ -2393,6 +2419,10 @@ video {
 
 .text-\[14px\] {
   font-size: 14px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
 }
 
 .text-\[16\.67px\] {
@@ -2458,14 +2488,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[13px\] {
-  font-size: 13px;
-}
-
-.text-\[15px\] {
-  font-size: 15px;
 }
 
 .font-\[400\] {
@@ -2753,6 +2775,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#\#356C07\] {
+  color: ##356C07;
+}
+
 .line-through {
   text-decoration-line: line-through;
 }
@@ -2936,8 +2962,9 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mt-4 {
+  .sm\:my-4 {
     margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 
   .sm\:block {
@@ -2968,18 +2995,6 @@ video {
     flex-direction: column;
   }
 
-  .sm\:place-content-center {
-    place-content: center;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
-  }
-
-  .sm\:p-4 {
-    padding: 1rem;
-  }
-
   .sm\:p-5 {
     padding: 1.25rem;
   }
@@ -2989,10 +3004,6 @@ video {
     padding-right: 1.5rem;
   }
 
-  .sm\:text-center {
-    text-align: center;
-  }
-
   .sm\:text-\[14px\] {
     font-size: 14px;
   }
@@ -3000,22 +3011,13 @@ video {
   .sm\:text-\[16px\] {
     font-size: 16px;
   }
-
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .sm\:leading-\[22px\] {
-    line-height: 22px;
-  }
-
-  .sm\:leading-\[28px\] {
-    line-height: 28px;
-  }
 }
 
 @media (min-width: 768px) {
+  .md\:top-\[4059px\] {
+    top: 4059px;
+  }
+
   .md\:order-1 {
     order: 1;
   }
@@ -3073,6 +3075,10 @@ video {
     margin-top: 60px;
   }
 
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -3091,6 +3097,14 @@ video {
 
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-\[711px\] {
+    height: 711px;
+  }
+
+  .md\:h-\[465px\] {
+    height: 465px;
   }
 
   .md\:w-\[229px\] {
@@ -3133,6 +3147,10 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -3153,6 +3171,10 @@ video {
     justify-content: flex-end;
   }
 
+  .md\:gap-0 {
+    gap: 0px;
+  }
+
   .md\:gap-12 {
     gap: 3rem;
   }
@@ -3165,8 +3187,8 @@ video {
     gap: 27.27px;
   }
 
-  .md\:gap-0 {
-    gap: 0px;
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:gap-x-\[27px\] {
@@ -3183,12 +3205,16 @@ video {
     row-gap: 30px;
   }
 
-  .md\:border-l-4 {
-    border-left-width: 4px;
+  .md\:overflow-hidden {
+    overflow: hidden;
   }
 
-  .md\:border-none {
-    border-style: none;
+  .md\:overflow-x-scroll {
+    overflow-x: scroll;
+  }
+
+  .md\:border-l-4 {
+    border-left-width: 4px;
   }
 
   .md\:border-l-amber-950 {
@@ -3206,14 +3232,14 @@ video {
     padding-right: 0;
   }
 
-  .md\:py-\[22px\] {
-    padding-top: 22px;
-    padding-bottom: 22px;
-  }
-
   .md\:py-5 {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
+  }
+
+  .md\:py-\[22px\] {
+    padding-top: 22px;
+    padding-bottom: 22px;
   }
 
   .md\:pb-0 {
@@ -3248,16 +3274,24 @@ video {
     padding-right: 55px;
   }
 
-  .md\:pt-0 {
-    padding-top: 0px;
-  }
-
   .md\:pt-5 {
     padding-top: 1.25rem;
   }
 
   .md\:pt-\[18px\] {
     padding-top: 18px;
+  }
+
+  .md\:pb-12 {
+    padding-bottom: 3rem;
+  }
+
+  .md\:pb-\[65px\] {
+    padding-bottom: 65px;
+  }
+
+  .md\:pt-\[45px\] {
+    padding-top: 45px;
   }
 
   .md\:text-start {
@@ -3307,8 +3341,8 @@ video {
     line-height: 1.75rem;
   }
 
-  .md\:text-\[20px\] {
-    font-size: 20px;
+  .md\:text-\[24px\] {
+    font-size: 24px;
   }
 
   .md\:leading-\[21\.82px\] {
@@ -3323,9 +3357,9 @@ video {
     line-height: 25px;
   }
 
-  .md\:text-\[\#1D1B77\] {
+  .md\:text-\[\#424242\] {
     --tw-text-opacity: 1;
-    color: rgb(29 27 119 / var(--tw-text-opacity));
+    color: rgb(66 66 66 / var(--tw-text-opacity));
   }
 }
 
@@ -3336,6 +3370,10 @@ video {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:overflow-x-hidden {
+    overflow-x: hidden;
   }
 
   .lg\:px-8 {
@@ -3379,15 +3417,6 @@ video {
 
   .xl\:gap-8 {
     gap: 2rem;
-  }
-
-  .xl\:border-l-4 {
-    border-left-width: 4px;
-  }
-
-  .xl\:border-l-amber-950 {
-    --tw-border-opacity: 1;
-    border-left-color: rgb(69 26 3 / var(--tw-border-opacity));
   }
 }
 
