--- a/src/output.css
+++ b/src/output.css
@@ -808,10 +808,6 @@ video {
   margin-right: 0px;
 }
 
-.mr-1 {
-  margin-right: 38px;
-}
-
 .mr-12 {
   margin-right: 3rem;
 }
@@ -956,6 +952,10 @@ video {
   margin-top: 47px;
 }
 
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
 .mt-\[55px\] {
   margin-top: 55px;
 }
@@ -964,8 +964,8 @@ video {
   margin-top: 60px;
 }
 
-.mt-\[80px\] {
-  margin-top: 80px;
+.mt-\[65px\] {
+  margin-top: 65px;
 }
 
 .mt-\[8px\] {
@@ -1667,8 +1667,8 @@ video {
   gap: 35px;
 }
 
-.gap-\[43px\] {
-  gap: 43px;
+.gap-\[38px\] {
+  gap: 38px;
 }
 
 .gap-\[5px\] {
@@ -1677,10 +1677,6 @@ video {
 
 .gap-\[8px\] {
   gap: 8px;
-}
-
-.gap-\[38px\] {
-  gap: 38px;
 }
 
 .gap-y-4 {
@@ -2235,11 +2231,6 @@ video {
   padding-bottom: 5px;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2308,6 +2299,10 @@ video {
   padding-bottom: 65px;
 }
 
+.pb-\[72px\] {
+  padding-bottom: 72px;
+}
+
 .pl-1 {
   padding-left: 0.25rem;
 }
@@ -2346,10 +2341,6 @@ video {
 
 .pl-\[55px\] {
   padding-left: 55px;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .pr-\[18px\] {
@@ -2464,10 +2455,6 @@ video {
   padding-top: 8px;
 }
 
-.pb-\[72px\] {
-  padding-bottom: 72px;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2541,10 +2528,6 @@ video {
 
 .text-\[30px\] {
   font-size: 30px;
-}
-
-.text-\[34px\] {
-  font-size: 34px;
 }
 
 .text-\[36px\] {
@@ -2884,10 +2867,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
-}
-
 .line-through {
   text-decoration-line: line-through;
 }
@@ -3062,11 +3041,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
   }
@@ -3127,14 +3101,6 @@ video {
     width: 100%;
   }
 
-  .sm\:w-\[200px\] {
-    width: 200px;
-  }
-
-  .sm\:max-w-\[340px\] {
-    max-width: 340px;
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -3185,20 +3151,12 @@ video {
     padding-right: 40px;
   }
 
-  .sm\:pl-0 {
-    padding-left: 0px;
-  }
-
   .sm\:pl-\[20px\] {
     padding-left: 20px;
   }
 
   .sm\:pl-\[30px\] {
     padding-left: 30px;
-  }
-
-  .sm\:pr-0 {
-    padding-right: 0px;
   }
 
   .sm\:pr-\[18px\] {
@@ -3229,10 +3187,6 @@ video {
     font-size: 16px;
   }
 
-  .sm\:text-\[28px\] {
-    font-size: 28px;
-  }
-
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -3248,10 +3202,6 @@ video {
 
   .sm\:leading-\[28px\] {
     line-height: 28px;
-  }
-
-  .sm\:leading-\[39\.51px\] {
-    line-height: 39.51px;
   }
 }
 
@@ -3320,6 +3270,10 @@ video {
 
   .md\:mt-\[60px\] {
     margin-top: 60px;
+  }
+
+  .md\:mt-\[80px\] {
+    margin-top: 80px;
   }
 
   .md\:block {
@@ -3452,11 +3406,6 @@ video {
     padding-bottom: 22px;
   }
 
-  .md\:px-\[18\] {
-    padding-left: 18;
-    padding-right: 18;
-  }
-
   .md\:pb-0 {
     padding-bottom: 0px;
   }
@@ -3471,6 +3420,10 @@ video {
 
   .md\:pl-0 {
     padding-left: 0px;
+  }
+
+  .md\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .md\:pl-\[50px\] {
@@ -3499,10 +3452,6 @@ video {
 
   .md\:pt-\[18px\] {
     padding-top: 18px;
-  }
-
-  .md\:pl-10 {
-    padding-left: 2.5rem;
   }
 
   .md\:text-start {
