--- a/src/output.css
+++ b/src/output.css
@@ -672,6 +672,14 @@ video {
   top: 50%;
 }
 
+.bottom-\[19px\] {
+  bottom: 19px;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -935,10 +943,6 @@ video {
   margin-top: 33px;
 }
 
-.mt-\[40px\] {
-  margin-top: 40px;
-}
-
 .mt-\[41px\] {
   margin-top: 41px;
 }
@@ -963,16 +967,16 @@ video {
   margin-top: 65px;
 }
 
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
 .mt-\[8px\] {
   margin-top: 8px;
 }
 
 .mt-\[9px\] {
   margin-top: 9px;
-}
-
-.mt-\[80px\] {
-  margin-top: 80px;
 }
 
 .line-clamp-2 {
@@ -1338,6 +1342,14 @@ video {
   width: 1px;
 }
 
+.w-\[48px\] {
+  width: 48px;
+}
+
+.w-\[32px\] {
+  width: 32px;
+}
+
 .min-w-\[120px\] {
   min-width: 120px;
 }
@@ -1456,6 +1468,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[11px\] {
+  max-width: 11px;
 }
 
 .flex-1 {
@@ -2330,6 +2346,10 @@ video {
   padding-bottom: 37px;
 }
 
+.pb-\[40px\] {
+  padding-bottom: 40px;
+}
+
 .pb-\[60px\] {
   padding-bottom: 60px;
 }
@@ -2492,10 +2512,6 @@ video {
 
 .pt-\[8px\] {
   padding-top: 8px;
-}
-
-.pb-\[40px\] {
-  padding-bottom: 40px;
 }
 
 .text-left {
@@ -3289,6 +3305,10 @@ video {
     margin-top: 0px;
   }
 
+  .md\:mt-\[120px\] {
+    margin-top: 120px;
+  }
+
   .md\:mt-\[12px\] {
     margin-top: 12px;
   }
@@ -3317,16 +3337,8 @@ video {
     margin-top: 80px;
   }
 
-  .md\:mt-\[120px\] {
-    margin-top: 120px;
-  }
-
-  .md\:mt-\[140px\] {
-    margin-top: 140px;
-  }
-
-  .md\:mt-\[240px\] {
-    margin-top: 240px;
+  .md\:mt-\[20p\] {
+    margin-top: 20p;
   }
 
   .md\:block {
@@ -3497,6 +3509,10 @@ video {
     padding-bottom: 0px;
   }
 
+  .md\:pb-\[100px\] {
+    padding-bottom: 100px;
+  }
+
   .md\:pb-\[18px\] {
     padding-bottom: 18px;
   }
@@ -3537,8 +3553,8 @@ video {
     padding-top: 18px;
   }
 
-  .md\:pb-\[100px\] {
-    padding-bottom: 100px;
+  .md\:pt-\[20px\] {
+    padding-top: 20px;
   }
 
   .md\:text-start {
